--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -42,26 +42,23 @@
 }
 .hero__title{
     text-transform: uppercase;
-    font-size: 5rem;
+    font-size: 8rem;
     font-weight: 300;
 }
 
 .hero__subtitle{
+    top: 100%;
+    left: 50%;
+    width: 100%;
     font-size: 1rem;
     font-weight: 300;
+    transform: translate(-50%, -50%)
 }
 
 .header__button{
-    margin-top: 16px;
+    margin-top: 40px;
 }
 
-.header__img{
-    position: fixed;
-    width: 700px;
-    height: 700px;
-    bottom: 50px;
-    right: 0;
-}
 
 
 .video{
@@ -100,7 +97,8 @@
     top: -100%;
     z-index: -1;
     left: 0;
-    transition-duration: 250ms;
+    transition-duration: 300ms;
+    transition-timing-function: ease-in-out;
 }
 
 .button-video:hover::after{
